Update z-index in project-detail component styles: Increase z-index from 1000 to 10001 to ensure proper layering of elements in the UI.

--- a/src/app/projects/project-detail/project-detail.component.scss
+++ b/src/app/projects/project-detail/project-detail.component.scss
@@ -113,7 +113,7 @@
 			left: 0;
 			justify-content: center;
 			align-items: center;
-			z-index: 1000;
+			z-index: 10001;
 			background: var(--bg-color);
 			width: 100%;
 			height: 100%;
